[package]
name = "custom-string"
version = "0.0.0"
description = "This library aids in generating string types with custom validation."
readme = "README.md"
repository = "https://github.com/nikdeapen/custom-string"
homepage = "https://github.com/nikdeapen/custom-string"
authors = ["Nik Deapen <nik@deapen.com>"]
edition = "2021"
license = "MIT"
