[package]
name = "custom-string"
version = "0.8.0"
description = "This library aids in generating string types with custom validation."
readme = "README.md"
repository = "https://github.com/nikdeapen/custom-string"
homepage = "https://github.com/nikdeapen/custom-string"
authors = ["Nik Deapen <nik@deapen.com>"]
edition = "2024"
license = "MIT"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
document-features = { version = "0.2.12", optional = true }
paste = "1.0.15"
serde = { version = "1.0.228", optional = true }

[features]
#! ## Serialization

## Provides serde `Serialize` and `Deserialize` support for custom string types.
serde = ["dep:serde"]

[dev-dependencies]
serde_json = "1"
